--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title FTW
     != stylesheet_link_tag :application
     != javascript_include_tag :application
+    != stylesheet_link_tag "http://fonts.googleapis.com/css?family=Press+Start+2P"
+
     != csrf_meta_tag
   %body
     %h1 FTW
