--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,5 +52,15 @@ h2{
     padding: 5px 10px;
     margin-top: 15px;
   }
+
+  .fields {
+      width: 300px;
+      margin: 10px auto;
+      label{
+        width: 150px;
+        display: inline-block;
+        text-align: left;
+      }
+  }
 }
 
