added room rendering

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,3 +11,4 @@
     %h1 FTW
     %h2 A gameifiend project manager. Quest your task, kill the bugs, get loot - woot.
     != yield
+    -#= render :partial => 'hub/hub'
