--- a/app/views/hub/_hub.html.haml
+++ b/app/views/hub/_hub.html.haml
@@ -1,2 +1,2 @@
+%canvas{:id => 'canvas', :width => 720, :height => 480}
 = javascript_include_tag 'hub'
-%canvas{:id => 'hub_canvas', :width => 720, :height => 480}
