--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,8 +8,10 @@
 body { padding-top: 60px} /* Must be between bootstrap and bootstrap-responsive */
 
 @import "bootstrap-responsive";
+@import "pages/landing.css.scss";
 
-body{
+
+body {
   font-family: 'Press Start 2P', cursive;
   background: #ff7f50
 }
@@ -31,43 +33,5 @@ h2{
   font-size: 16px;
   text-align: center;
   color: white;
-}
-
-.login{
-  background: white;
-  width: 600px;
-  margin: 0 auto;
-  padding: 15px;
-  margin-top: 30px;
-  box-shadow: black 5px 5px;
-  text-align: center;
-
-  span{
-    display: block;
-    font-size: 10px;
-    color: #555;
-    text-align: center;
-    margin-top: 5px;
-  }
-
-  button{
-    color :blue;
-    box-shadow: black 5px 5px;
-    border: none;
-    color: white;
-    font-size: 16px;
-    padding: 5px 10px;
-    margin-top: 15px;
-  }
-
-  .fields {
-      width: 300px;
-      margin: 10px auto;
-      label{
-        width: 150px;
-        display: inline-block;
-        text-align: left;
-      }
-  }
 }
 
