--- a/app/views/partials/_hub.html.haml
+++ b/app/views/partials/_hub.html.haml
@@ -1,2 +1,3 @@
-%canvas{:id => 'canvas', :width => 720, :height => 480}
+.hub
+  %canvas{:id => 'canvas', :width => 720, :height => 480}
 = javascript_include_tag 'hub'
