--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,11 @@ h1{
   text-align: center;
 }
 
+.navbar .brand{
+  color: yellow;
+  text-shadow: blue 3px 3px;
+}
+
 h2{
   font-size: 16px;
   text-align: center;
