--- a/app/views/character/show.html.haml
+++ b/app/views/character/show.html.haml
@@ -1,8 +1,9 @@
 %h3 Character View
-.avatar
-%h4!= @character.name
-%h5
-  Level
-  != @character.level
-  ,
-  != display_class(@character)
+.character-view
+  .avatar.pull-left
+  %h4!= @character.name
+  %h5
+    Level
+    != @character.level
+    ,
+    != display_class(@character)
