added character partial

--- a/app/assets/stylesheets/components/character.css.scss.erb
+++ b/app/assets/stylesheets/components/character.css.scss.erb
@@ -11,3 +11,35 @@
     }
 
 }
+
+.character-view{
+    .avatar{
+        margin-right: 10px;
+    }
+    h4{
+        color: #111;
+    }
+    width: 450px;
+    overflow: hidden;
+
+
+}
+
+.exp-bar{
+    border: 1px solid black;
+    border-radius: 2px;
+    background: rgba(255,255,255,0.3);
+    position: relative;
+    overflow: hidden;
+    height: 6px;
+    margin-top: 3px;
+
+    .exp {
+        height: 100%;
+        background: #adff2f;
+        display: block;
+        position: absolute;
+        left: 0 ;
+        top: 0;
+    }
+}
