--- a/app/views/character/show.html.haml
+++ b/app/views/character/show.html.haml
@@ -1,9 +1,3 @@
 %h3 Character View
-.character-view
-  .avatar.pull-left
-  %h4!= @character.name
-  %h5
-    Level
-    != @character.level
-    ,
-    != display_class(@character)
+!= render :partial => "character", :locals => {:character => @character}
+!= render :partial => "quest_log", :locals => {:character => @character}
