--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,3 +51,14 @@ input[type=submit] {
   border-radius: 0px;
   font-family: 'Press Start 2P', cursive;
 }
+
+.dropdown-toggle {
+  padding: 0px !important;
+  .account-name {
+    color: #005580 !important;
+  }
+
+  .nav-text {
+    font-size: 12px;
+  }
+}
