added js to contorl xp bar

--- a/app/assets/stylesheets/components/character.css.scss.erb
+++ b/app/assets/stylesheets/components/character.css.scss.erb
@@ -41,5 +41,8 @@
         position: absolute;
         left: 0 ;
         top: 0;
+        &.anim{
+            -webkit-transition: width 1s;
+        }
     }
 }
