--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -1,3 +1,13 @@
-%h3
-  Welcome to FTW
-%ul
+.dashboard.span12
+  %h3 FTW Dashboard
+  .row
+    .span6
+      != render :partial => "/character/character", :locals => {character: @current_character}
+      != render :partial => "/character/skills", :locals => {character: @current_character}
+    .span6
+      != render :partial => "/character/quest_log", :locals => {character: @current_character}
+  .row
+    %hr
+    .span10
+      != render :partial => "/partials/hub"
+
