--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,8 @@
 body { padding-top: 60px} /* Must be between bootstrap and bootstrap-responsive */
 
 @import "bootstrap-responsive";
+
+/* System Pages */
 @import "pages/landing.css.scss";
 
 
