--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@ body { padding-top: 60px} /* Must be between bootstrap and bootstrap-responsive 
 
 /* System Pages */
 @import "pages/landing.css.scss";
+@import "pages/dashboard.css.scss";
 
 
 body {
